# opencl-test

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
OpenCL_info/: CMakeLists.txt
OpenCL_info/include/: TestCMake.h
OpenCL_info/src/: TestCMake.cpp
